--- a/Practice/Button Up/index.html
+++ b/Practice/Button Up/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>  
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Button Styling</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -8,11 +11,8 @@
     <div class="gradient-button1">
         <button>Search</button>
     </div>
-    <div>
-        <button id="button2">+</button>
-    </div>
-    <div>
-        <button id="button3">Create Account</button>
-    </div>
+    <button class="btn-add">+</button>
+    <button class="btn-create">Create Account</button>
+    
 </body>
 </html>
