--- a/Practice/Button Up/index.html
+++ b/Practice/Button Up/index.html
@@ -8,11 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="gradient-button1">
-        <button>Search</button>
-    </div>
+    <button class="btn-search">Search</button>
     <button class="btn-add">+</button>
     <button class="btn-create">Create Account</button>
-    
 </body>
 </html>
