--- a/Core/Profile Page/index.html
+++ b/Core/Profile Page/index.html
@@ -9,65 +9,115 @@
 </head>
 <body>
     <div class="nav">
-        <div class="nav-content flex justify-around align-center">
-            <div class="nav-links flex align-center justify-evenly">  
+        <div class="nav-content flex justify-between align-center">
+            <div class="nav-links flex justify-between align-center">
                 <h1>Profile</h1>
-                <a href="#">Home</a>
-                <a href="#" class="active">My Profile</a>
-                <a href="#">Find Connections</a>
+                <a href="./index.html">Home</a>
+                <a href="./index.html">My Profile</a>
+                <a href="./index.html">Find Connections</a>
             </div>
-            <button class="btn">Sign Out</button>
+            <a href="https://www.freecodecamp.org/"><button class="btn">Sign Out</button></a>
         </div>
     </div>
-    <div class="flex">
-        <div class="col-1">
-        </div>
-        <div class="col-2">
+    <div class="flex-box flex">
+        <div class="col-3">
             <div class="user-card">
                 <div class="card-header">
                     <img src="./images/CatProfile.JPG" alt="Profile Image">
                 </div>
                 <div class="card-body">
                     <h1>Leonardo Robles</h1>
-                    <div class="flex align-center">
-                        <img src="./icons/map-marker.png" alt="Map Icon">
-                        <h3>Seattle</h3>
-                    </div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing</p>
-                    <p>elit. Rerum, nostrum.</p>
-                    <div class="flex align-center">
-                        <img src="./icons/gear.png" alt="Gear Icon">
-                        <a href="">Hire Me Please!</a>
-                    </div>
+                <div class="flex align-center">
+                    <img src="./icons/map-marker.png" alt="Map Icon">
+                <h3>Seattle</h3>
+                </div>
+                <p>Developer | Engineer | Problem Solver | Definitely Not a Cat</p>
+                <p>Master of shadows and the Internet!</p>
+                <div class="flex align-center">
+                    <img src="./icons/gear.png" alt="Gear Icon">
+                    <a href="./index.html">Hire Me Please!</a>
+                </div>
+                </div>
+            </div>
+            <div class="edu-box flex flex-column justify-around align-evenly">
+                <div class="edu-header flex flex-column justify-around">
+                    <p>Education</p>
+                </div>
+                <div class="edu-content flex flex-column justify-around">
+                    <p style="font-size: 20px;">Coding Dojo - Full Stack Bootcamp</p>
+                    <p style="color: rgba(0, 0, 0, .5);">Dec 2019 - Mar 2020</p>
+                    <p style="font-style: italic;">Tripple Black Belt in Python, MERN, and C# </p>
                 </div>
             </div>
         </div>
         <div class="col-2">
-            <div class="req-box flex flex-column align-evenly justify-center">    
+            <div class="req-box flex flex-column align-evenly">
                 <div class="req-num flex justify-between align-center">
-                    <div class="req-circle flex"><p>2</p></div>
-                    <div class="req-txt flex"><p>Connection Requests</p></div>
+                    <div class="req-circle flex">
+                        <p>2</p>
+                    </div>
+                    <div class="req-txt flex">
+                        <p>Connection Requests</p>
+                    </div>
                 </div>
-                <div class="req-user1 flex justify-between align-center">
-                    <img src="./images/user-circle.png" alt="User Circle">
-                    <p>Todd E</p>
+                <div class="req-user flex justify-between align-center">
+                    <img src="./images/todd-s.jpg" alt="User Circle">
+                    <a href="./index.html">Todd E</a>
                     <div class="req-icon1 flex">
                         <img src="./icons/accept-circle.png" alt="Accept Circle">
                         <img src="./icons/close-circle.png" alt="Close Circle">
                     </div>
                 </div>
-                <div class="req-user2 flex justify-between align-center">
-                    <img src="./images/user-circle.png" alt="User Circle">
-                    <p>Phil K</p>
+                <div class="req-user flex justify-between align-center">
+                    <img src="./images/phil-s.jpg" alt="User Circle">
+                    <a href="./index.html">Phil K</a>
                     <div class="req-icon2 flex">
                         <img src="./icons/accept-circle.png" alt="Accept Circle">
                         <img src="./icons/close-circle.png" alt="Close Circle">
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-1">
+
+            <div class="req-box flex flex-column align-evenly">
+                <div class="req-num flex justify-between align-center">
+                    <div class="req-circle flex">
+                        <p>500+</p>
+                    </div>
+                    <div class="req-txt flex">
+                        <p>Your Connections</p>
+                    </div>
+                </div>
+                <div class="con-user flex align-center ">
+                    <img src="./images/adrien-s.jpg" alt="User Circle">
+                    <div class="con-link">
+                        <a href="./index.html">Adrien D</a>
+                    </div>
+                </div>
+                <div class="con-user flex align-center">
+                    <img src="./images/anne-s.jpg" alt="User Circle">
+                    <div class="con-link">
+                        <a href="./index.html">Anne J</a>
+                    </div>
+                </div>
+                <div class="con-user flex align-center">
+                    <img src="./images/alayne-s.jpg" alt="User Circle">
+                    <div class="con-link">
+                        <a href="./index.html">Alayne T</a>
+                    </div>
+                </div>
+                <div class="con-user flex align-center">
+                    <img src="./images/arry-s.jpg" alt="User Circle">
+                    <div class="con-link">
+                        <a href="./index.html">Arry Y</a>
+                    </div>
+                </div>
+                <div class="con-more flex align-center">
+                    <a href="./index.html">View More</a>
+                </div>
+            </div>
         </div>
     </div>
+
 </body>
+
 </html>
